fix projects gap

--- a/src/style/projects.css
+++ b/src/style/projects.css
@@ -1,5 +1,4 @@
 .projects {
-    margin: 80px 0 0 0;
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -8,10 +7,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 15px 30px;
+    /* gap: 15px 30px; */
+    margin: 80px -15px 0 -15px;
 }
 
 .project {
+    margin: 15px;
     border-radius: 25px;
     padding: 30px;
     display: -webkit-box;
@@ -90,6 +91,7 @@
 
 .break {
     flex-basis: 100%;
+    position: relative; 
     height: 0;
   }
 
